--- a/git_test_1.html
+++ b/git_test_1.html
@@ -12,6 +12,7 @@
     <H1>git 사용법</H1>
     <h2>git 단축키</h2>
     <b>단축키 사용은 시간을 단축할 수 있다.</b>
+    <b>단축키 사용은 작업의 효율성을 높인다.</b>
 </body>
 
 </html>
